--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,47 +6,51 @@
   "homepage": "./",
   "scripts": {
     "build": "cross-env REACT_APP_BACKEND=true PUBLIC_URL='./' react-scripts build",
-    "start": "cross-env REACT_APP_BACKEND=true react-scripts start",
+    "start": "cross-env REACT_APP_BACKEND=true react-scripts --max_old_space_size=8128 start",
     "test": "react-scripts test",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@babel/helper-define-map": "^7.18.6",
+    "@babel/helper-regex": "^7.10.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/styles": "^5.6.2",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.5.1",
     "@mui/styled-engine-sc": "^5.14.12",
+    "@mui/styles": "^5.6.2",
     "@mui/x-data-grid": "^6.16.0",
-    "@reduxjs/toolkit": "^1.9.7",
     "@mui/x-date-pickers": "^5.0.0-alpha.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^0.21.4",
     "babel-eslint": "10.1.0",
-    "date-fns": "2.28.0",
+    "babel-helpers": "^6.24.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "classnames": "^2.3.2",
     "connected-react-router": "^6.0.0",
     "css-loader": "2.1.1",
+    "date-fns": "2.28.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.1",
     "file-loader": "3.0.1",
     "formik": "2.2.9",
+    "history": "4.10.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "2.29.4",
     "query-string": "7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "history": "4.10.1",
     "react-syntax-highlighter": "^11.0.3",
-    "tinycolor2": "^1.6.0",
-    "moment": "2.29.4",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "tinycolor2": "^1.6.0",
     "typescript": "^4.1.2",
     "url-loader": "2.3.0",
-    "react-drag-drop-files": "^2.3.10",
     "yup": "^0.32.11"
   },
   "eslintConfig": {
